package com.unken.codewars.common.utils

object Constants {
    // Test tags
    const val ChallengesListTag = "ChallengesListTag"
    const val StartButtonTag = "StartButtonTag"
    const val EndButtonTag = "EndButtonTag"
    const val NextButtonTag = "NextButtonTag"
    const val PreviousButtonTag = "PreviousButtonTag"
    const val PageTextFieldTag = "PageTextFieldTag"
}